# digital-business-cards

./: .editorconfig  .env.ldap.example  .gitattributes  .gitignore  README.md  agents.md  dbc.py  docker-compose.ldap.yml  docker-compose.yml  pyproject.toml
.github/: renovate.json
.github/workflows/: add-to-board.yml  renovate.yml
_docs/: CHe.vcf  examples.md  orgchart-alternatives.md  orgchart.mock.md  orgchart.mock.puml  orgchart.webm  roadmap.md  sync-sources.md
data/: contacts.mock.csv  orgchart.mock.html
ldifs/: 01-structure.ldif  02-contacts.ldif
src/: __init__.py  avatar.py  azure_sync.py  cli.py  ldap_sync.py  md_card.py  models.py  orgchart.py  orgchart_graph.py  orgchart_renderers.py  qr_generator.py  storage.py  vcard.py
