[project]
name = "digital-business-cards"
version = "0.1.0"
description = "Generate QR codes for digital business cards from Azure AD contacts"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Marcel Körtgen", email = "marcel.koertgen@gmail.com" }
]
keywords = ["qr-code", "vcard", "azure-ad", "business-cards"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1.7",
    "pandas>=2.2.0",
    "pydantic>=2.6.0",
    "azure-identity>=1.15.0",
    "requests>=2.31.0",
    "vobject>=0.9.7",
    "qrcode[pil]>=7.4.2",
    "segno>=1.6.0",  # Alternative: better SVG support
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.scripts]
dbc = "digital_business_cards.cli:cli"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
